$$IS_MR and $$JS_SCOPE access crashes the server

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.4
    • Affects Version/s: 4.3.4
    • Component/s: Querying
    • Fully Compatible
    • ALL
    • Query 2020-02-24, Query 2020-03-09
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Please consider passing these to shards with a different mechanism since logically using runtime constants is a bit of a mismatch. These are expected to be user-visible.

      As for why this happens this switch at least is not expecting the new constants.

            Assignee:
            Katherine Wu (Inactive)
            Reporter:
            Jacob Evans (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: