SERVER-46311 $$IS_MR and $$JS_SCOPE access crashes server

create mode 100644 jstests/aggregation/variables/runtime_constants.js