src/mongo/db/pipeline/variables.cpp
@@ -40,12 +40,8 @@ namespace mongo {
 constexpr Variables::Id Variables::kRootId;
 constexpr Variables::Id Variables::kRemoveId;
 
-const StringMap<Variables::Id> Variables::kBuiltinVarNameToId = {{"ROOT", kRootId},
-                                                                 {"REMOVE", kRemoveId},
-                                                                 {"NOW", kNowId},
-                                                                 {"CLUSTER_TIME", kClusterTimeId},
-                                                                 {"JS_SCOPE", kJsScopeId},
-                                                                 {"IS_MR", kIsMapReduceId}};
+const StringMap<Variables::Id> Variables::kBuiltinVarNameToId = {
+    {"ROOT", kRootId}, {"REMOVE", kRemoveId}, {"NOW", kNowId}, {"CLUSTER_TIME", kClusterTimeId}};
 
 void Variables::uassertValidNameForUserWrite(StringData varName) {
     // System variables users allowed to write to (currently just one)
@@ -154,6 +150,10 @@ Value Variables::getValue(Id id, const Document& root) const {
                           str::stream() << "Builtin variable '$$" << getBuiltinVariableName(id)
                                         << "' is not available");
                 MONGO_UNREACHABLE;
+            case Variables::kJsScopeId:
+                uasserted(4631100, "Use of undefined variable '$$JS_SCOPE'.");
+            case Variables::kIsMapReduceId:
+                uasserted(4631101, "Use of undefined variable '$$IS_MR'.");
             default:
                 MONGO_UNREACHABLE;
         }
